# pikamon-py

./: .gitignore  Dockerfile  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-report.yml
configuration/: logging.json
configuration/database/: pokemon.sql  users.sql
pikamon/: bot.py  constants.py
pikamon/commands/: catch.py  help.py  list.py  register.py
pikamon/database/: connect.py
pikamon/pokeapi/: api.py
pikamon/spawner/: poke_api.py  spawner.py
tests/: conftest.py
tests/fixtures/: database_fixtures.py
tests/helpers/: database_helpers.py
tests/pikamon/: test_bot.py
tests/pikamon/database/: test_connect.py  test_pokemon_schema.py  test_user_schema.py
tests/pikamon/pokeapi/: test_api.py
