
[metadata]
license_file=LICENSE.txt

[bdist_wheel]
universal=1

[flake8]
# Set the maximum line length
max-line-length = 119

# Error Codes - https://pep257.readthedocs.io/en/latest/error_codes.html
# D105: Missing docstring in magic method
# W503: Line break before binary operator
ignore = D105, W503

# Comma-separated list of glob patterns to exclude from checks
exclude =
    # No need to traverse git directory
    .git,
    .gitignore,
    # There's no value in checking cache directories
    __pycache__,
    .pytest_cache,
    .cache,
    # No need to check configuration files
    configuration,
    # No need to check build directories or output
    build,
    dist,
    *.egg-info,
    .pyc

# Set the maximum allowed McCabe complexity value for code
max-complexity = 10

# Set the number of spaces used for indentation
indent-size = 4

[pytest]
norecursedirs=tests/helpers
